# yahp

./: README.md
boards_v3/: _autosave-sensor_v3.kicad_pcb  boards_v3-B_Cu.gbr  boards_v3-B_Mask.gbr  boards_v3-B_Paste.gbr  boards_v3-B_Silkscreen.gbr  boards_v3-Edge_Cuts.gbr  boards_v3-F_Cu.gbr  boards_v3-F_Mask.gbr  boards_v3-F_Paste.gbr  boards_v3-F_Silkscreen.gbr  boards_v3-In1_Cu.gbr  boards_v3-In2_Cu.gbr  boards_v3-NPTH-drl_map.gbr  boards_v3-NPTH.drl  boards_v3-PTH-drl_map.gbr  boards_v3-PTH.drl  boards_v3-job.gbrjob  boards_v3.kicad_pcb  boards_v3.kicad_prl  boards_v3.kicad_pro  boards_v3.kicad_sch  fp-info-cache  schematic-positions-to-layout.debug  sensor_v3-B_Cu.gbr  sensor_v3-B_Mask.gbr  sensor_v3-B_Paste.gbr  sensor_v3-B_Silkscreen.gbr  sensor_v3-Edge_Cuts.gbr  sensor_v3-F_Cu.gbr  sensor_v3-F_Mask.gbr  sensor_v3-F_Paste.gbr  sensor_v3-F_Silkscreen.gbr  sensor_v3-NPTH-drl_map.gbr  sensor_v3-NPTH.drl  sensor_v3-PTH-drl_map.gbr  sensor_v3-PTH.drl  sensor_v3-job.gbrjob  sensor_v3.kicad_pcb  sensor_v3.kicad_prl  sensor_v3.kicad_pro  (+2 more)
oldsrc/: calibrate.cpp  sample.cpp  scheduling.cpp
pno_gui/: Cargo.toml  Dioxus.toml
pno_gui/assets/: colors.css  main.css
pno_gui/src/: main.rs
pno_gui/src/core/: config.rs  core.rs  fbi.rs  gui.rs  mod.rs  sensor.rs
sampler/: .gitignore  compile_commands.json  platformio.ini
sampler_split_sensor/: fp-info-cache  sampler_split_sensor-B_Paste.gbr  sampler_split_sensor-Edge_Cuts.gbr  sampler_split_sensor-F_Mask.gbr  sampler_split_sensor-F_Paste.gbr  sampler_split_sensor-In2_Cu.gbr  sampler_split_sensor-NPTH-drl_map.gbr  (+7 more)
(+70 files in other folders)
