[package]
name = "pno_gui"
version = "0.1.0"
authors = ["Sawyer Bergeron <sawyerbergeron@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
corncobs = { version = "0.1.3", features = ["std"] }
flatbuffers = "24.12.23"
midi = "0.1.0"
serialport = "4.6.1"
#tokio-serial = "5.4.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "=2.5.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
